--- a/beauty-treatments.html
+++ b/beauty-treatments.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Massages || mellis || mellis HTML 5 Template </title>
+    <title> Beauty Treatments || Asuna Salon </title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -76,7 +76,7 @@
                                         <i class="fas fa-envelope"></i>
                                     </div>
                                     <div class="text">
-                                        <p><a href="needhelp@company.com">needhelp@company.com</a></p>
+                                        <p><a target="_blank" href="mailto:book@asunasalon.com">book@asunasalon.com</a></p>
                                     </div>
                                 </li>
                                 <li>
@@ -84,20 +84,19 @@
                                         <i class="fas fa-phone"></i>
                                     </div>
                                     <div class="text">
-                                        <p><a href="tel:9288006930">+ 92 ( 8800 ) - 6930</a></p>
+                                        <p><a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a></p>
                                     </div>
                                 </li>
                             </ul>
                         </div>
                         <div class="main-header__top-right">
                             <div class="main-header__social">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-facebook"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a target="_blank" href="https://www.facebook.com/asunasalon/"><i class="fab fa-facebook"></i></a>
+                                <a target="_blank" href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
+                                <a target="_blank" href="https://www.instagram.com/saba.asuna/"><i class="fab fa-instagram"></i></a>
                             </div>
                             <div class="main-header__btn-box">
-                                <a href="contact.html" class="thm-btn main-header__btn">Book now</a>
+                                
                             </div>
                         </div>
                     </div>
@@ -109,58 +108,23 @@
                     <div class="main-menu__wrapper-inner">
                         <div class="main-menu__left">
                             <div class="main-menu__logo">
-                                <a href="index.html"><img src="assets/images/resources/logo-1.png" alt=""></a>
+                                <a href="index.html"><img style="width: 80px;" src="assets/images/My-images/logo.avif" alt=""></a>
                             </div>
                         </div>
                         <div class="main-menu__main-menu-box">
                             <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                             <ul class="main-menu__list">
-                                <li class="dropdown">
+                                <li class="">
                                     <a href="index.html">Home </a>
-                                    <ul>
-                                        <li><a href="index.html">Home One</a></li>
-                                        <li><a href="index2.html">Home Two</a></li>
-                                        <li><a href="index3.html">Home Three</a></li>
-                                        <li class="dropdown">
-                                            <a href="#">Header Styles</a>
-                                            <ul>
-                                                <li><a href="index.html">Header One</a></li>
-                                                <li><a href="index2.html">Header Two</a></li>
-                                                <li><a href="index3.html">Header Three</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
                                 </li>
-                                <li class="dropdown">
-                                    <a href="#">Our Services</a>
-                                    <ul>
-                                        <li><a href="services.html">Services</a></li>
-                                        <li><a href="services-details-1.html">Service Details One</a></li>
-                                        <li><a href="spa-facials.html">Spa Facials</a></li>
-                                        <li><a href="massages.html">Massages</a></li>
-                                        <li><a href="hydro-therapy.html">Hydro Therapy</a></li>
-                                        <li><a href="thermo-stone.html">Thermo Stone</a></li>
-                                        <li><a href="salt-&-aroma.html">Salt & Aroma</a></li>
-                                        <li><a href="body-treatments.html">Body Treatments</a></li>
-                                    </ul>
+                                <li class="current">
+                                    <a href="hair-styling.html">Our Services</a>
                                 </li>
-                                <li class="dropdown">
-                                    <a href="#">Pages</a>
-                                    <ul>
-                                        <li><a href="team.html">Team Members</a></li>
-                                        <li><a href="pricing-plans.html">Pricing Plans</a></li>
-                                        <li><a href="promotions.html">Promotions</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                        <li><a href="client-stories.html">Client Stories</a></li>
-                                        <li><a href="client-story-details.html">Client Story Details</a></li>
-                                    </ul>
+                                <li class="">
+                                    <a href="pricing-plans.html">Our Menu</a>
                                 </li>
-                                <li class="dropdown">
-                                    <a href="#">Shop</a>
-                                    <ul>
-                                        <li><a href="products.html">Products</a></li>
-                                        <li><a href="product-details.html">Product Details</a></li>
-                                    </ul>
+                                <li class="">
+                                    <a href="head-spa.html">Head Spa</a>
                                 </li>
                                 <li>
                                     <a href="contact.html">Contact</a>
@@ -168,14 +132,7 @@
                             </ul>
                         </div>
                         <div class="main-menu__right">
-                            <div class="main-menu__search-cart-box">
-                                <div class="main-menu__search-box">
-                                    <a href="#" class="main-menu__search search-toggler icon-magnifying-glass"></a>
-                                </div>
-                                <div class="main-menu__cart-box">
-                                    <a href="#" class="main-menu__cart icon-shopping-cart"></a>
-                                </div>
-                            </div>
+                            <a href="contact.html" class="thm-btn main-slider__btn">Book Now</a>
                         </div>
                     </div>
                 </div>
@@ -189,18 +146,16 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header__bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg);">
+            <div class="page-header__bg" style="background-image: url(assets/images/My-images/Head-4.jpg);">
             </div>
             <div class="container">
                 <div class="page-header__inner">
                     <ul class="thm-breadcrumb list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><span>/</span></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><span>/</span></li>
-                        <li>Massages</li>
+                        <li>Service: Beauty Treatments</li>
                     </ul>
-                    <h2>Massages</h2>
+                    <h2>Beauty Treatments</h2>
                 </div>
             </div>
         </section>
@@ -215,37 +170,26 @@
                             <div class="services-details-two__category">
                                 <ul class="services-details-two__category-list list-unstyled">
                                     <li>
-                                        <a href="spa-facials.html">Spa Facials <i class="fa fa-angle-right"></i></a>
+                                        <a href="hair-styling.html">Hair Styling <i class="fa fa-angle-right"></i></a>
                                     </li>
                                     <li class="active">
-                                        <a href="massages.html">Massages <i class="fa fa-angle-right"></i></a>
+                                        <a href="beauty-treatments.html">Beauty Treatments <i class="fa fa-angle-right"></i></a>
                                     </li>
                                     <li>
-                                        <a href="hydro-therapy.html">Hydro Therapy <i class="fa fa-angle-right"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="thermo-stone.html">Thermo Stone <i class="fa fa-angle-right"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="salt-&-aroma.html">Salt & Aroma <i class="fa fa-angle-right"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="body-treatments.html">Body Treatments <i
-                                                class="fa fa-angle-right"></i></a>
+                                        <a href="head-spa.html">Head Spa<i class="fa fa-angle-right"></i></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="services-details-two__help-line">
                                 <div class="services-details-two__help-line-img">
-                                    <img src="assets/images/services/services-details-two-help-line-img-1.jpg" alt="">
+                                    <img src="assets/images/My-images/book.jpg" alt="">
                                 </div>
                                 <div class="services-details-two__help-line-content">
                                     <div class="services-details-two__help-line-icon">
                                         <span class="icon-telephone-call"></span>
                                     </div>
                                     <p class="services-details-two__help-line-sub-title">Book for You</p>
-                                    <h3 class="services-details-two__help-number"><a href="tel:9288006839">+ 92 ( 8800 )
-                                            6839</a></h3>
+                                    <h3 class="services-details-two__help-number"><a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -253,9 +197,9 @@
                     <div class="col-xl-8 col-lg-7">
                         <div class="services-details-two__right">
                             <div class="services-details-two__img">
-                                <img src="assets/images/services/services-details-two-img-2.jpg" alt="">
+                                <img src="assets/images/My-images/beauty-1.jpg" alt="">
                             </div>
-                            <h3 class="services-details-two__title-1">Massages</h3>
+                            <h3 class="services-details-two__title-1">Body Treatments</h3>
                             <p class="services-details-two__text-1">Lorem ipsum is simply free text used by copytyping
                                 refreshing. Neque porro est qui dolorem ipsum quia quaed inventore veritatis et quasi
                                 architecto beatae vitae dicta sunt explicabo. Aelltes port lacus quis enim var sed
@@ -380,20 +324,10 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                             <div class="footer-widget__column footer-widget__contact-box">
                                 <div class="footer-widget__contact">
-                                    <a href="mailto:needhelp@company.com">needhelp@company.com</a>
-                                    <a href="tel:9288006930">+ 92 ( 8800 ) 6930</a>
+                                    <a target="_blank" href="mailto:book@asunasalon.com">book@asunasalon.com</a>
+                                    <a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a>
                                 </div>
-                                <div class="footer-widget__contact-form-box">
-                                    <form class="footer-widget__contact-form mc-form" data-url="MC_FORM_URL"
-                                        novalidate="novalidate">
-                                        <div class="footer-widget__contact-form-input-box">
-                                            <input type="email" placeholder="Email address" name="EMAIL">
-                                            <button type="submit" class="footer-widget__newsletter-btn"><img
-                                                    src="assets/images/icon/paper-plan-icon.png" alt=""></button>
-                                        </div>
-                                    </form>
-                                    <div class="mc-form__response"></div>
-                                </div>
+                                 
                             </div>
                         </div>
                         <div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
@@ -402,9 +336,8 @@
                                     <h4 class="footer-widget__title">Links</h4>
                                 </div>
                                 <ul class="footer-widget__links-list list-unstyled">
-                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="hair-styling.html">Services</a></li>
                                     <li><a href="pricing-plans.html">Pricing Plans</a></li>
-                                    <li><a href="promotions.html">Promotions</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
@@ -424,12 +357,11 @@
                         <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                             <div class="footer-widget__column footer-widget__social-box">
                                 <div class="site-footer__social">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-facebook"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a target="_blank" href="https://www.facebook.com/asunasalon"><i class="fab fa-facebook"></i></a>
+                                    <a target="_blank" href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuna/"><i class="fab fa-instagram"></i></a>
                                 </div>
-                                <p>66 Broklyn Golden Street <br> New York. USA</p>
+                                <p>Birmingham<br>UK</p>
                             </div>
                         </div>
                     </div>
@@ -438,10 +370,9 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Copyright 2023 by <a href="#">mellis.com</a></p>
+                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuna Salon</a></p>
                                 <ul class="list-unstyled site-footer__bottom-menu">
-                                    <li><a href="#">Help</a></li>
-                                    <li><a href="#">Privacy Policy</a></li>
+                                    <li><a href="contact.html">Help</a></li>
                                 </ul>
                             </div>
                         </div>
