--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                                         <i class="fas fa-envelope"></i>
                                     </div>
                                     <div class="text">
-                                        <p><a href="needhelp@company.com">needhelp@company.com</a></p>
+                                        <p><a target="_blank" href="mailto:book@asunasalon.com">book@asunasalon.com</a></p>
                                     </div>
                                 </li>
                                 <li>
@@ -84,20 +84,19 @@
                                         <i class="fas fa-phone"></i>
                                     </div>
                                     <div class="text">
-                                        <p><a href="tel:9288006930">+ 92 ( 8800 ) - 6930</a></p>
+                                        <p><a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a></p>
                                     </div>
                                 </li>
                             </ul>
                         </div>
                         <div class="main-header__top-right">
                             <div class="main-header__social">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-facebook"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a target="_blank" href="https://www.facebook.com/asunasalon/"><i class="fab fa-facebook"></i></a>
+                                <a target="_blank" href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
+                                <a target="_blank" href="https://www.instagram.com/saba.asuna/"><i class="fab fa-instagram"></i></a>
                             </div>
                             <div class="main-header__btn-box">
-                                <a href="contact.html" class="thm-btn main-header__btn">Book now</a>
+                                
                             </div>
                         </div>
                     </div>
@@ -109,58 +108,23 @@
                     <div class="main-menu__wrapper-inner">
                         <div class="main-menu__left">
                             <div class="main-menu__logo">
-                                <a href="index.html"><img src="assets/images/resources/logo-1.png" alt=""></a>
+                                <a href="index.html"><img style="width: 80px;" src="assets/images/My-images/logo.avif" alt=""></a>
                             </div>
                         </div>
                         <div class="main-menu__main-menu-box">
                             <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                             <ul class="main-menu__list">
-                                <li class="dropdown">
+                                <li class="">
                                     <a href="index.html">Home </a>
-                                    <ul>
-                                        <li><a href="index.html">Home One</a></li>
-                                        <li><a href="index2.html">Home Two</a></li>
-                                        <li><a href="index3.html">Home Three</a></li>
-                                        <li class="dropdown">
-                                            <a href="#">Header Styles</a>
-                                            <ul>
-                                                <li><a href="index.html">Header One</a></li>
-                                                <li><a href="index2.html">Header Two</a></li>
-                                                <li><a href="index3.html">Header Three</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
                                 </li>
-                                <li class="dropdown">
-                                    <a href="#">Our Services</a>
-                                    <ul>
-                                        <li><a href="services.html">Services</a></li>
-                                        <li><a href="services-details-1.html">Service Details One</a></li>
-                                        <li><a href="spa-facials.html">Spa Facials</a></li>
-                                        <li><a href="massages.html">Massages</a></li>
-                                        <li><a href="hydro-therapy.html">Hydro Therapy</a></li>
-                                        <li><a href="thermo-stone.html">Thermo Stone</a></li>
-                                        <li><a href="salt-&-aroma.html">Salt & Aroma</a></li>
-                                        <li><a href="body-treatments.html">Body Treatments</a></li>
-                                    </ul>
+                                <li class="">
+                                    <a href="hair-styling.html">Our Services</a>
                                 </li>
-                                <li class="dropdown">
-                                    <a href="#">Pages</a>
-                                    <ul>
-                                        <li><a href="team.html">Team Members</a></li>
-                                        <li><a href="pricing-plans.html">Pricing Plans</a></li>
-                                        <li><a href="promotions.html">Promotions</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                        <li><a href="client-stories.html">Client Stories</a></li>
-                                        <li><a href="client-story-details.html">Client Story Details</a></li>
-                                    </ul>
+                                <li class="">
+                                    <a href="pricing-plans.html">Our Menu</a>
                                 </li>
-                                <li class="dropdown">
-                                    <a href="#">Shop</a>
-                                    <ul>
-                                        <li><a href="products.html">Products</a></li>
-                                        <li><a href="product-details.html">Product Details</a></li>
-                                    </ul>
+                                <li class="">
+                                    <a href="head-spa.html">Head Spa</a>
                                 </li>
                                 <li>
                                     <a href="contact.html">Contact</a>
@@ -168,14 +132,7 @@
                             </ul>
                         </div>
                         <div class="main-menu__right">
-                            <div class="main-menu__search-cart-box">
-                                <div class="main-menu__search-box">
-                                    <a href="#" class="main-menu__search search-toggler icon-magnifying-glass"></a>
-                                </div>
-                                <div class="main-menu__cart-box">
-                                    <a href="#" class="main-menu__cart icon-shopping-cart"></a>
-                                </div>
-                            </div>
+                            <a href="contact.html" class="thm-btn main-slider__btn">Book Now</a>
                         </div>
                     </div>
                 </div>
@@ -189,7 +146,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header__bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg);">
+            <div class="page-header__bg" style="background-image: url(assets/images/My-images/Head-4.jpg);">
             </div>
             <div class="container">
                 <div class="page-header__inner">
@@ -206,7 +163,7 @@
 
         <!--Spa Center Three Start-->
         <section class="spa-center-three">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="section-title text-center">
                     <span class="section-title__tagline">Locations</span>
                     <h2 class="section-title__title">Our Spa Centers</h2>
@@ -257,7 +214,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
         <!--Spa Center Three End-->
 
@@ -275,10 +232,9 @@
                                 experience to
                                 be a memorable one.</p>
                             <div class="contact-page__social">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-facebook"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/asunasalon"><i class="fab fa-facebook"></i></a>
+                                <a href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
+                                <a href="https://www.instagram.com/saba.asuna"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -331,7 +287,7 @@
         <!--Google Map Start-->
         <section class="contact-page__google-map">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4562.753041141002!2d-118.80123790098536!3d34.152323469614075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e82469c2162619%3A0xba03efb7998eef6d!2sCostco+Wholesale!5e0!3m2!1sbn!2sbd!4v1562518641290!5m2!1sbn!2sbd"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2430.867069045088!2d-1.9064229238109056!3d52.46343484041658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4870bd6fac7e6a25%3A0x295f014efba05adc!2sAsuna%20Salon!5e0!3m2!1sen!2s!4v1750857649385!5m2!1sen!2s"
                 class="contact-page__google-map-one" allowfullscreen></iframe>
 
         </section>
@@ -351,20 +307,10 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                             <div class="footer-widget__column footer-widget__contact-box">
                                 <div class="footer-widget__contact">
-                                    <a href="mailto:needhelp@company.com">needhelp@company.com</a>
-                                    <a href="tel:9288006930">+ 92 ( 8800 ) 6930</a>
+                                    <a target="_blank" href="mailto:book@asunasalon.com">book@asunasalon.com</a>
+                                    <a target="_blank" href="https://wa.me/+447931931966">+44 7931 931966</a>
                                 </div>
-                                <div class="footer-widget__contact-form-box">
-                                    <form class="footer-widget__contact-form mc-form" data-url="MC_FORM_URL"
-                                        novalidate="novalidate">
-                                        <div class="footer-widget__contact-form-input-box">
-                                            <input type="email" placeholder="Email address" name="EMAIL">
-                                            <button type="submit" class="footer-widget__newsletter-btn"><img
-                                                    src="assets/images/icon/paper-plan-icon.png" alt=""></button>
-                                        </div>
-                                    </form>
-                                    <div class="mc-form__response"></div>
-                                </div>
+                                 
                             </div>
                         </div>
                         <div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
@@ -373,9 +319,8 @@
                                     <h4 class="footer-widget__title">Links</h4>
                                 </div>
                                 <ul class="footer-widget__links-list list-unstyled">
-                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="hair-styling.html">Services</a></li>
                                     <li><a href="pricing-plans.html">Pricing Plans</a></li>
-                                    <li><a href="promotions.html">Promotions</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
@@ -395,12 +340,11 @@
                         <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                             <div class="footer-widget__column footer-widget__social-box">
                                 <div class="site-footer__social">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-facebook"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a target="_blank" href="https://www.facebook.com/asunasalon"><i class="fab fa-facebook"></i></a>
+                                    <a target="_blank" href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuna/"><i class="fab fa-instagram"></i></a>
                                 </div>
-                                <p>66 Broklyn Golden Street <br> New York. USA</p>
+                                <p>Birmingham<br>UK</p>
                             </div>
                         </div>
                     </div>
@@ -409,10 +353,9 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Copyright 2023 by <a href="#">mellis.com</a></p>
+                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuna Salon</a></p>
                                 <ul class="list-unstyled site-footer__bottom-menu">
-                                    <li><a href="#">Help</a></li>
-                                    <li><a href="#">Privacy Policy</a></li>
+                                    <li><a href="contact.html">Help</a></li>
                                 </ul>
                             </div>
                         </div>
